<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@color/colorBackground"
    android:id="@+id/mainLayout">

    <EditText
        android:id="@+id/ETnombre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altoETMain"
        android:layout_marginRight="@dimen/ETmarginSide"
        android:layout_marginLeft="@dimen/ETmarginSide"
        android:layout_marginBottom="35dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ETpassword" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altoETMain"
        android:layout_marginRight="@dimen/ETmarginSide"
        android:layout_marginLeft="@dimen/ETmarginSide"
        android:layout_marginBottom="@dimen/ETmargenB"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="@dimen/anchoBtnMain"
        android:layout_height="@dimen/altoBtnMain"
        android:text="@string/logIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="hacerLogIn"/>

    <TextView
        android:id="@+id/TVcrearUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/crearUsuario"
        android:textSize="@dimen/TVCrearuser"
        android:textStyle="bold"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>